[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiniGames/ArrorGame.gd" type="Script" id=1]
[ext_resource path="res://Images/arrow_alpha.png" type="Texture" id=2]
[ext_resource path="res://MiniGames/ArrowAlpha.gd" type="Script" id=3]
[ext_resource path="res://MiniGames/ArrowGoal.gd" type="Script" id=4]
[ext_resource path="res://Images/euro_icon_white.png" type="Texture" id=5]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 10.0
scale = 0.8
color = Color( 0, 0.0156863, 1, 1 )

[node name="ArrorGame" type="Node2D"]
scale = Vector2( 0.740077, 0.740077 )
script = ExtResource( 1 )

[node name="ArrowAlpha" type="Sprite" parent="."]
position = Vector2( 0, -604 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ArrowGoal" type="Sprite" parent="."]
position = Vector2( 0, 1041 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="WhiteColor" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 163.496, 1037.73 )
emitting = false
amount = 10
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource( 1 )
texture = ExtResource( 5 )

[connection signal="timeout" from="WhiteColor" to="ArrowAlpha" method="_on_WhiteColor_timeout"]
[connection signal="timeout" from="WhiteColor" to="ArrowGoal" method="_on_WhiteColor_timeout"]
